# mozilla-repo-urls

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: python.yml
mozilla_repo_urls/: __init__.py  errors.py  parser.py  result.py
requirements/: base.txt  test.in  test.txt
test/: test_eq.py  test_integration.py  test_parser.py
